                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.1
  *) [TS-824] Range requests that result in cache refresh give 200 status
   response with full contents. Review and suggestions for improvements
   by Charlie Gero.

  *) [TS-964] Add 64-bit integer plugin APIs for HTTP headers.

  *) [TS-932] Fix m_pending_event == NULL crash in LogCollationClientSM.cc
   Author: weijin

  *) [TS-830] Better error when there are CLI permission problems, or
   other problems preventing operation. Author: AdunGaos.

  *) [TS-979] Found a few places where we can segfault with strlcpy.

  *) [TS-938] Fix VIA to avoid loopback address. For Solaris only IPv4
   is supported.

  *) [TS-945] Convert transparent forward requests to server style when
     forwarding to a parent proxy. Contributed by Yossi Gottlieb.

  *) [TS-926] IPv6 conversion of iocore.

  *) [TS-967] This is a simplified version of Arno Toell's patch which does
   the same: Check if any -O options where given, and if so, use those, if
   not, use our default -O3.

  *) [TS-957] remove IE6 from the white list of ae_ua filter

  *) [TS-955] Fix the logging regression testing.

  *) [TS-962] typo of key name in logstats.cc. Author: Nick Berry.

  *) [TS-958] Fix a few valgrind memory check errors.

  *) [TS-567] A number of memory allocation clean up, and improvements. We
   now also support building with tcmalloc, jemalloc, and you can also turn
   off the freelist feature (for better debugging).

  *) [TS-950] Make the HTTP header regressions work on 32-bit, inefficient,
   but it works.

  *) [TS-956] fix the building with zlib-1.2.5.1.

  *) [TS-953] consolidate string copy/concat for examples.

  *) [TS-924] More efficient sharing of origin connections.
    
   This also overloads the config for shared connections as follows:
    
       #  0 - Never
       #  1 - Share, with a single global connection pool