@@ -1,5 +1,7 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.1
+  *) [TS-948] Don't reload or load a broken remap.config.
+
   *) [TS-824] Range requests that result in cache refresh give 200 status
    response with full contents. Review and suggestions for improvements
    by Charlie Gero.
